--- a/day 2/jsassignment1.html
+++ b/day 2/jsassignment1.html
@@ -3,8 +3,8 @@
   <head>
     <meta charset="utf-8">
     <title></title>
-<!--    <script src="main.js"></script> -->
-<!--    <script src="sample.js"></script> -->
+   <script src="main.js"></script> 
+   <script src="sample.js"></script> 
 <script src="stringmethods.js"></script>
   </head>
   <body>
