adding one file

--- a/day 2/jsassignment1.html
+++ b/day 2/jsassignment1.html
@@ -6,6 +6,7 @@
    <script src="main.js"></script> 
    <script src="sample.js"></script> 
 <script src="stringmethods.js"></script>
+<script src="main2.js"></script>
   </head>
   <body>
 
